--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "isbot": "^4.1.0",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
